--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 4.5rem;
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
-  position:relative;
+  position:sticky;
   top: 0;
   left: 0;
   background-color: #FFFFFF;
